deploy-kubernetes-do/config/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: custom-service-name
spec:
  type: LoadBalancer
  ports:
    - port: 80
      # container port
      targetPort: 9000
  selector:
    app: custom-service-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-service-name
spec:
  replicas: 2
  strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 0
         maxUnavailable: 1
  selector:
    matchLabels:
      app: custom-service-name
  template:
    metadata:
      labels:
        app: custom-service-name
    spec:
      containers:
      - name: custom-service-name
        image: <IMAGE>
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "300m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 9000
      imagePullSecrets:
      - name: regcred
