deploy-kubernetes-do/config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-service-name-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";
spec:
  tls:
  - hosts:
      - custom-host.com
    secretName: custom-service-name-tls
  rules:
  - host: custom-host.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: custom-service-name
            port:
              number: 80
